style: fix profile menu z-index bug in navbar

--- a/components/store/navbar/navProfile/navProfile.module.scss
+++ b/components/store/navbar/navProfile/navProfile.module.scss
@@ -65,6 +65,8 @@
     opacity: 0;
     transition: all 0.3s;
     padding: 4px;
+    z-index: 10;
+
     transform-origin: right top;
     > button {
       width: 100%;
